[package]
name = "lasman"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENCE"
authors = ["Constantinos Menelaou"]
readme = "README.md"
description = "Tools for LAS file manipulation."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = {version = "0.17.8", features = ["rayon"]}
las = { git="https://github.com/konmenel/las-rs.git", version = "0.8", features = ["laz-parallel"] }
num-format = "0.4.4"
rayon = "1.10.0"
shapefile =  "0.6"

[profile.release]
lto = true
strip = true
codegen-units = 1
